--- a/local_rmd_nbooks/m2_strain_decon_all.Rmd
+++ b/local_rmd_nbooks/m2_strain_decon_all.Rmd
@@ -183,7 +183,7 @@ map2(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), ~system(p
 NB - LOCAL CODE
 ```{r, message=FALSE, eval=F}
 ## copy from farm
-system(paste0('rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/Pf/all_msc_anotd_preQC_mdata.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/',species,'/'))
+system(paste0('rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/', species,'/all_msc_anotd_preQC_mdata.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/',species,'/'))
 
 ```
 
@@ -287,7 +287,7 @@ Transfer clusters.tsv files with assignment of cells to strains and PCA plots me
 
 Read all the souporcell files for all the iterations. May be excessive but since we have the memory and cpu and we may need to use the files downstream then why not.
 ```{r, results='hide', eval=FALSE}
-# list.files("data/processed/Pf/", pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)
+# list.files(paste0("data/processed/", species,"/"), pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)
 list.files(paste0("data/processed/", species), pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)%>% set_names(nm = (str_remove_all(.,paste0('data/processed/', species, '/|soupc/|k|/clusters.tsv')) %>% str_replace_all(., '/', '_'))) 
 ```
 
@@ -513,15 +513,15 @@ soupo_kselect_list <- map2(soupo_kselect_list,strain_levels, ~.x %>% mutate(acro
 ```{r, message=FALSE}
 ##Copy souporcell files for the optimum clusters investigation on igv - all except negative
 
-soupo_kmerge <- map(sample_name_nms, ~{
-soupo_kselect_list[str_detect(names(soupo_kselect_list), paste0(.x, "_"))] %>% 
-  imap(., ~{
-    nms = .y
-    .x %>% rename_with(~paste0(.,'_', nms), everything()) %>% rownames_to_column('bcode')
-        }) %>% 
-    purrr::reduce(., left_join, by = 'bcode')
-  }) %>% 
-  set_names(sample_name_nms)
+# soupo_kmerge <- map(sample_name_nms, ~{
+# soupo_kselect_list[str_detect(names(soupo_kselect_list), paste0(.x, "_"))] %>% 
+#   imap(., ~{
+#     nms = .y
+#     .x %>% rename_with(~paste0(.,'_', nms), everything()) %>% rownames_to_column('bcode')
+#         }) %>% 
+#     purrr::reduce(., left_join, by = 'bcode')
+#   }) %>% 
+#   set_names(sample_name_nms)
 
 ```
 
@@ -540,6 +540,7 @@ soupo_kselect_list[str_detect(names(soupo_kselect_list), paste0(.x, "_"))] %>%
   set_names(sm_aln_nms_al)
 
 ```
+
 
 ```{r}
 ##Transfer stage labels and other metadata from farm
@@ -642,7 +643,6 @@ ss_bar_plt <-list( rep(soupo_seu_kmerge, times = opt_clusters_len_aln), rep(name
 
 ##!!!!!!!NB!!!! SUNILS STAGES
 ```
-
 
 
 
@@ -925,6 +925,96 @@ soupo_seu_kmerge[[3]] %>%
 ```
 
 
+```{r}
+# ##Transfer stage labels and other metadata from farm
+# # list.files(paste0("data/processed/", species,"/"), pattern = "msc_filt_w_dblts_scmap_metadata.RDS", full.names = T, recursive = T, include.dirs = T) %>% 
+# #   set_names(nm = (str_remove_all(.,paste0('data/processed/', species, '//|_5736.*|/msc_filt_w_dblts_scmap_metadata.RDS')) %>% str_replace(., '/', '_'))) 
+# 
+# all_msc_anotd_preQC_mdata <- readRDS(paste0("data/processed/", species,"/all_msc_anotd_preQC_mdata.RDS")) %>% .[sample_name_nms]
+# msc_mdata <- map(all_msc_anotd_preQC_mdata, ~.x %>% rownames_to_column('bcode'))
+# # msc_mdata <- map2(all_msc_anotd_preQC_mdata, msc_qcd_anotd_mdata, ~.x  %>% select(StagePrelim) %>% rownames_to_column('bcode') %>% left_join(., .y %>% rownames_to_column('bcode'), by='bcode'))
+```
+
+```{r}
+# ##Transfer stage labels and other metadata from farm
+# # mdata_all <- list.files(paste0("data/processed/", species,"/"), pattern = "msc_filt_w_dblts_scmap_metadata.RDS", full.names = T, recursive = T, include.dirs = T) %>% 
+# #   set_names(nm = (str_remove_all(.,paste0('data/processed/', species, '//|_5736.*|/msc_filt_w_dblts_scmap_metadata.RDS')) %>% str_replace(., '/', '_'))) %>%
+# mdata_all <- msc_mdata %>% .[sample_name_nms] %>%
+#   map(. %>% 
+#         # readRDS() %>% 
+#         # dplyr::rename('stageHL' = stageHR_msc14) %>%
+#         mutate(#across(stageHL, ~str_replace_all(.,c('high count' = 'HE', 'low count' = 'LE'))),
+#                ##Collapse asexuals and gams and number of cells per coarse group & add the number per xluster as a column in metadata
+#                stage_afm = case_when(str_detect(StagePrelim, 'ring|troph') ~ 'Asexual', 
+#                                      str_detect(StagePrelim, '\\(male') ~ 'Male', 
+#                                      str_detect(StagePrelim, 'Male') ~ 'Male', 
+#                                      str_detect(StagePrelim, 'emale') ~ 'Female', 
+#                                      str_detect(StagePrelim, 'developing') ~ 'Developing',
+#                                      T ~StagePrelim),
+#                stage_ag = case_when(str_detect(StagePrelim, 'ring|troph') ~ 'Asexual', 
+#                                     str_detect(StagePrelim, 'ale|developing') ~ 'Gametocyte',
+#                                      T ~StagePrelim)) 
+#       ) 
+
+```
+
+
+```{r, fig.width = 16, fig.height = 4, message=FALSE, warning=FALSE}
+iter=2
+
+# ss_bar_plt <-list( rep(soupo_seu_kmerge, times = opt_clusters_len), rep(names(soupo_seu_kmerge), times = opt_clusters_len), opt_clusters_nms[names(soupo_seu_kmerge)] %>% flatten() %>% map(.,max))  %>% 
+ss_bar_plt <-list( rep(soupo_seu_kmerge, times = opt_clusters_len_aln), rep(names(soupo_seu_kmerge), times = opt_clusters_len_aln), opt_clusters_nms_aln[names(soupo_seu_kmerge)] %>% flatten() %>% map(.,max))  %>% 
+  purrr::pmap(.,~{
+  a_tbl <- ..1 %>%
+      mutate(across(stage_afm, ~droplevels(factor(., levels=c('Asexual', 'Female', 'Male', 'Developing', 'Unassigned'))))) %>%
+      dplyr::count(!!rlang::sym(paste('Strain',..2,..3, sep='_')), stage_afm, .drop = FALSE) 
+  
+  ##get stage_ag labels and counts to add to the Strain_max+stage_afm counts generated above
+  stage_ag_cnt <- ..1 %>% 
+    dplyr::select(!!rlang::sym(paste('Strain',..2,..3, sep='_')), stage_ag, stage_afm) %>% 
+    add_count(!!rlang::sym(paste('Strain',..2,..3, sep='_')), stage_ag, name = 'stage_ag_n') %>% 
+    distinct(pick(!!rlang::sym(paste('Strain',..2,..3, sep='_')), stage_afm), .keep_all = T) %>% 
+    left_join(a_tbl, ., by =c(paste('Strain',..2,..3, sep='_'), 'stage_afm')) %>% 
+    rename(c('Stage'= stage_afm, 'Counts' =n, 'Strain' = !!rlang::sym(paste('Strain',..2,..3, sep='_'))))  
+  
+  print(stage_ag_cnt)
+  
+    b_plt <- stage_ag_cnt %>%
+      # ggplot(., aes(x = Stage, y = Counts, fill = Stage, color=stage_ag_n<30)) +
+      ggplot(., aes(x = Stage, y = Counts, fill = Stage)) +
+      geom_col(position = position_dodge2()) + #width=0.4, position = position_dodge(width=0.5) 
+      geom_text(aes(label=Counts), hjust=0.5, vjust= -0.3, position = position_dodge(width = .9), size = 7, show.legend = F, fontface ='bold', colour='black')+
+      scale_fill_manual(values = c_stg_cols) + #'Asexual' = "#FFE5B4", 'Male' = "#BFD7B5", 'Female'="#8ab6d6"
+      # scale_color_manual(values = c('FALSE' = "white", 'TRUE' = "blue")) +
+  geom_tile(aes(x = Stage, y = -10, fill = Stage, height = 14)) +
+  facet_wrap( Strain ~ ., nrow = 1) +
+      scale_y_continuous(expand = expansion(mult = c(0.01, 0.15))) +
+      scale_x_discrete(expand = expansion(add = c(1, 1))) +
+      theme_classic() +
+  labs( y = 'Counts')+
+      theme(
+        axis.text.y  = element_text(size = 22),
+        axis.title.y  = element_text(size = 22, face = "bold"),
+        axis.title.x = element_blank(),
+        # axis.title = element_text(size = 18, face = "bold"),
+        legend.text = element_text(size = 22),
+        legend.title = element_text(size = 22, face = "bold"),
+        legend.position="bottom",
+        axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        strip.text =element_text(size=20,face="bold", colour = 'black'),
+        panel.border=element_rect(colour="black",fill='transparent')
+      )+ 
+      guides(color = F)
+    print(b_plt)
+    
+    return(b_plt)
+})
+
+##!!!!!!!NB!!!! SUNILS STAGES
+```
+
+
 
 ```{r, message=FALSE}
 ##Coalesce the genotypes and get a consensus genotype taking labels for highest resolution K
@@ -988,35 +1078,6 @@ map2(clusters_log_likelihoods_lst[str_detect(names(clusters_log_likelihoods_lst)
 )
 ```
 
-```{r, fig.width=16, fig.height=8, eval=FALSE} 
-# optimum_k = c(8,6,6,7,7,9,3,8,3,3,3) %>% set_names(sample_name_nms)
-
-optimum_kv2 <- optimum_k-1
-optimum_kv3 <- optimum_k+1
-
-
-sc_ll_knee_p_all <- map2(clusters_log_likelihoods_lst[str_detect(names(clusters_log_likelihoods_lst), "hsat")] , optimum_k, ~.x %>% mutate(opt_k = .y)) %>%
-  bind_rows(., .id = 'donor') %>% 
-  mutate(across(donor, ~factor(str_remove(., '_hsat'), levels = names(optimum_k)))) %>%
-    mutate(across(c('No_of_clusters'), ~factor(as.numeric(.)))) %>%
-    ggplot(., aes(x = No_of_clusters, y = log10(-(log_likelihood)))) + 
-    scale_y_reverse() +
-    geom_point() +
-    geom_line(aes(group = 1)) + 
-    geom_vline(aes(xintercept = optimum_k), data.frame(optimum_k) %>% set_names("optimum_k") %>% rownames_to_column('donor') %>% mutate(across(donor, ~factor(., levels = sample_name_nms)))) +
-    scale_x_discrete(breaks = function(x){x[c(F, T)]}) +
-    facet_wrap(donor~., nrow = 2)+
-    theme_classic() +
-    theme(axis.title = element_text(size=20, face = 'bold'),
-          axis.text.y = element_text(size=18),
-          axis.text.x = element_text(size=16),
-          strip.text =element_text(size=24,face="bold", colour = 'black'),
-          panel.border=element_rect(colour="black",fill='transparent')) +
-    labs(y= "Log likelihood ( log10(-))", x = "Number of strains")
-
-sc_ll_knee_p_all
-# saveRDS(sc_ll_knee_p_all, "plots/fig_QC_s1/sc_ll_knee_p_all.RDS")
-```
 
 ```{r, fig.width=7.5, fig.height= 5.5, eval=FALSE}
   
@@ -1170,7 +1231,7 @@ Calculate proportion of variance explained by PC1 and PC2
 
 ```{r}
 ## Save PCA
-saveRDS(soupo_PCA, "data/processed/Pf/soupo_PCA_m22.RDS")
+saveRDS(soupo_PCA, paste0("data/processed/", species,"/soupo_PCA_m22.RDS"))
 ```
 
 
@@ -1404,7 +1465,7 @@ map(strn_c_mdata, . %>%
       pull(cluster) %>%
       str_remove_all(., 'ametocyte|sexual')
 ) %>% imap(., ~paste(.x, .y, sep='_')) %>%
-  saveRDS(., "data/processed/Pf/ss_ag_gtype_clusters_100_m22.RDS")
+  saveRDS(., paste0("data/processed/", species,"/ss_ag_gtype_clusters_100_m22.RDS"))
 
 ```
 
@@ -1415,14 +1476,14 @@ map(strn_c_mdata,
       # dplyr::select("bcode", "Strn_c", starts_with("Strain"),"stage_afm", "stage_ag", "cluster_ag_n", "cluster_afm_n", "stageHL", "strain_afm_n", "strain")) %>%
       dplyr::select(-c(starts_with("Strain_MSC"))) %>%
       dplyr::select("bcode", "Strn_c", starts_with("Strain"),"stage_afm", "stage_ag", "cluster_ag_n", "cluster_afm_n", "strain_afm_n", "strain", "dbt_neg_all")) %>%
-  saveRDS("data/processed/Pf/strn_c_new_mdata_m22.RDS")
+  saveRDS(paste0("data/processed/", species,"/strn_c_new_mdata_m22.RDS"))
 
 
 ```
 
 ```{r, eval=FALSE}
   system(
-        paste0('rsync -av --delete /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/strn_c_new_mdata_m22.RDS jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/',species,'/')
+        paste0('rsync -av --delete /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'data/processed/', species,'/strn_c_new_mdata_m22.RDS jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/',species,'/')
       )
 ```
 
@@ -1475,7 +1536,7 @@ opt_narrow_k_tbl
 
 ```{r}
 ## Write out the counts of the pseudobulk groups that have been processed
-saveRDS(opt_narrow_k_tbl, "data/processed/Pf/opt_narrow_k_tbl.RDS")
+saveRDS(opt_narrow_k_tbl, paste0("data/processed/", species,"/opt_narrow_k_tbl.RDS"))
 ```
 
 Write out strain_qcd/strain + stage_ag/stage_afm barcodes to farm for pseudobulk genotyping
@@ -1567,8 +1628,7 @@ gogogo()
 ```{r}
 gogogo()
 
-# nextflow nf_scripts/pbulk_gtyping.nf --sv_dir "pbulk_gtypes_preQC" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC{38,41,51,25}/soupc/*/parent/possorted_genome_bam.bam"  --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC{38,41,51,25}/pbulk_gtypes_preQC/bcodes/minmap/*/*tsv" --odir= "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --mapper="minmap" --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/cr_subset_bam_linux.sh" --ref  "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/references_for_souporcell/PlasmoDB-66_Pfalciparum3D7_Genome.fasta"
-
+# nextflow nf_scripts/pbulk_gtyping.nf --sv_dir "pbulk_gtypes_preQC" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC{41,51,25,50_SLO}/soupc/*/parent/possorted_genome_bam.bam"  --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_preQC/bcodes/minmap/*/*tsv" --odir "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --mapper "minmap" --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/cr_subset_bam_linux.sh" --ref  "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/references_for_souporcell/PlasmoDB-66_Pfalciparum3D7_Genome.fasta"
 
 ```
 
